--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,6 +41,7 @@ file.reference.iText-2.1.7.jar=lib/iText-2.1.7.jar
 file.reference.mail.jar=lib/mail.jar
 file.reference.poi-3.17.jar=lib/poi-3.17.jar
 file.reference.sqljdbc4.jar=lib/sqljdbc4.jar
+file.reference.TaskMailByteCode.jar=C:\\Users\\cesar\\Downloads\\Taller Web1 Back end (1)\\Taller Web\\lib\\TaskMailByteCode.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -67,7 +68,8 @@ javac.classpath=\
     ${file.reference.iText-2.1.7.jar}:\
     ${file.reference.mail.jar}:\
     ${file.reference.poi-3.17.jar}:\
-    ${file.reference.sqljdbc4.jar}
+    ${file.reference.sqljdbc4.jar}:\
+    ${file.reference.TaskMailByteCode.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
