--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,7 @@ file.reference.groovy-all-1.7.5.jar=lib/groovy-all-1.7.5.jar
 file.reference.iText-2.1.7.jar=lib/iText-2.1.7.jar
 file.reference.mail.jar=lib/mail.jar
 file.reference.poi-3.17.jar=lib/poi-3.17.jar
+file.reference.primefaces-7.0.jar=lib\\primefaces-7.0.jar
 file.reference.sqljdbc4.jar=lib/sqljdbc4.jar
 includes=**
 j2ee.compile.on.save=true
@@ -55,7 +56,6 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.primefaces.classpath}:\
     ${file.reference.BootsFaces-OSP-1.1.3-dist-default.jar}:\
     ${file.reference.commons-beanutils-1.8.2.jar}:\
     ${file.reference.commons-collections-3.2.1.jar}:\
@@ -67,7 +67,8 @@ javac.classpath=\
     ${file.reference.iText-2.1.7.jar}:\
     ${file.reference.mail.jar}:\
     ${file.reference.poi-3.17.jar}:\
-    ${file.reference.sqljdbc4.jar}
+    ${file.reference.sqljdbc4.jar}:\
+    ${file.reference.primefaces-7.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
