--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ file.reference.commons-javaflow-20060411.jar=lib/commons-javaflow-20060411.jar
 file.reference.commons-logging-1.1.jar=lib/commons-logging-1.1.jar
 file.reference.groovy-all-1.7.5.jar=lib/groovy-all-1.7.5.jar
 file.reference.iText-2.1.7.jar=lib/iText-2.1.7.jar
+file.reference.jasperreports-4.7.1.jar=lib/jasperreports-4.7.1.jar
 file.reference.mail.jar=lib/mail.jar
 file.reference.poi-3.17.jar=lib/poi-3.17.jar
 file.reference.primefaces-7.0.jar=lib\\primefaces-7.0.jar
@@ -68,7 +69,8 @@ javac.classpath=\
     ${file.reference.mail.jar}:\
     ${file.reference.poi-3.17.jar}:\
     ${file.reference.sqljdbc4.jar}:\
-    ${file.reference.primefaces-7.0.jar}
+    ${file.reference.primefaces-7.0.jar}:\
+    ${file.reference.jasperreports-4.7.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
