--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,7 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=resources/js
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -38,10 +39,9 @@ file.reference.commons-javaflow-20060411.jar=lib/commons-javaflow-20060411.jar
 file.reference.commons-logging-1.1.jar=lib/commons-logging-1.1.jar
 file.reference.groovy-all-1.7.5.jar=lib/groovy-all-1.7.5.jar
 file.reference.iText-2.1.7.jar=lib/iText-2.1.7.jar
-file.reference.jasperreports-4.7.1.jar=lib/jasperreports-4.7.1.jar
 file.reference.mail.jar=lib/mail.jar
 file.reference.poi-3.17.jar=lib/poi-3.17.jar
-file.reference.primefaces-7.0.jar=lib\\primefaces-7.0.jar
+file.reference.primefaces-7.0.jar=lib/primefaces-7.0.jar
 file.reference.sqljdbc4.jar=lib/sqljdbc4.jar
 includes=**
 j2ee.compile.on.save=true
@@ -69,8 +69,7 @@ javac.classpath=\
     ${file.reference.mail.jar}:\
     ${file.reference.poi-3.17.jar}:\
     ${file.reference.sqljdbc4.jar}:\
-    ${file.reference.primefaces-7.0.jar}:\
-    ${file.reference.jasperreports-4.7.1.jar}
+    ${file.reference.primefaces-7.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
